--- a/assets/stylesheets/login-window.css
+++ b/assets/stylesheets/login-window.css
@@ -4,24 +4,22 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  /* width: 350px;
-  height: 380px; */
-  /* border: 1px solid black; */
+  justify-content: center; 
+ /* width: 350px;
+  height: 380px;  */
+   /* border-right: 1px solid black;  
+   border-left: 1px solid black;   */
 }
 
 .loginBox.loginBox__logo  p {
+  display: flex;
+  justify-content: center;
   letter-spacing: 1px;
   font-family: "My Custom Font";
   color:rgba(7, 7, 7, .75);
   text-shadow: 0 0 2px rgba(100, 100, 100, 5);
   font-size: 48px;
   font-weight: 500;
-}
-
-.loginBox__login_buttons{
-  flex-direction: row;
-  display:flex;
 }
 
 .loginBox.loginBox__logo > img {
@@ -37,6 +35,7 @@
   object-fit: none;
   object-position: -545px -511px;
 }
+
 .loginBox__fbook {
  display:flex;
  flex-direction: row;
@@ -50,11 +49,21 @@
 }
 
 .loginBox__username input, .loginBox__password input{
+
 background-color: rgb(235,235,235);
 width: 200px;
 height:26px
 }
 
+/* .loginBox__username, .loginBox__password{
+  display: flex;
+justify-content: center;
+} */
+
+.floating-label{
+position: relative;
+/* right: 80px; */
+}
 input:focus ~ .floating-label,
 input:not(:focus):valid ~ .floating-label{
   top: 8px;
@@ -74,24 +83,52 @@ input:not(:focus):valid ~ .floating-label{
   /* position: absolute; */
   pointer-events: none;
   left: 20px;
-  top: 18px;
+  /* top: 18px; */
   transition: 0.2s ease all;
 }
 
+div.loginBox.loginBox__login_buttons{  
+  display: flex;
+  flex-direction: row;
+}
+
 .loginBox__button{
-  /* height: 30px; */
+  height: 30px;
   font-size: 14px;
   font-weight: 700;
   color: white;
-  border-radius: 2px;
+  border-radius: 5px;
+  /* width: 130px; */
+  box-sizing: border-box;
+  border: 1px solid rgb(0, 153, 255);
+  background-color: rgb(0, 153, 255);
+  padding: 10px 30px;
+  margin: 0 4px;
+  cursor: pointer;
+ }
+
+ .loginBox__button:hover{
+   cursor: pointer;
+ }
+ .loginBox__button:hover:disabled{
+   cursor: default;
+ }
+ 
+.loginBox__button:disabled{
+  text-decoration:none;
+  height: 30px;
+  font-size: 14px;
+  font-weight: 700;
+  color: white;
+  border-radius: 5px;
   /* width: 130px; */
   box-sizing: border-box;
   border: 1px solid rgb(163, 208, 238);
   background-color: rgb(163, 208, 238);
   padding: 10px 30px;
   margin: 0 4px;
-
 }
+
 .loginBox__getAppButtons{
   display: flex;
   flex-direction: row;
@@ -103,4 +140,82 @@ input:not(:focus):valid ~ .floating-label{
 .loginBox__googlePlay {
   width:135px;
   height:auto;
+}
+
+.loginShowBtn{
+  position: relative;;
+  right:-78px;
+  top: -29px;
+  height: 26px;
+  border: none;
+  background-color: none;
+
+}
+.loginShowBtn{
+  position: relative;;
+  right:-78px;
+  top: -29px;
+  height: 26px;
+  border: none;
+  background-color: none;
+
+}
+
+.loginShowBtn--hidden{
+  box-sizing: border-box;
+  z-index: -1;
+
+}
+
+
+/* input:focus ~ .floating-label, */
+/* input:not(:focus):valid ~ .floating-label{
+  top: 8px;
+  bottom: 10px;
+  left: 20px;
+  font-size: 11px;
+  opacity: 1;
+} */
+/* 
+.inputText {
+  position: relative;
+  font-size: 14px;
+  width: 200px;
+  height: 35px;
+}
+
+.floating-label {
+position: absolute;   pointer-events: none;
+  left: 20px;
+  top: 18px;
+  transition: .8s ease all;
+} */
+/* .loginBox_passwordField{
+
+  display: flex;
+  justify-content: center;
+} */
+.loginBox__password{
+  position: relative;
+}
+.passwordPlaceholder{
+  z-index: 1;
+  left:69px;
+  bottom: -10px;
+  font-size:14px;
+}
+.passwordPlaceholder:hover{
+  /* transition: font-size .8s ease; */
+  z-index: 1;
+  left:69px;
+  bottom: -10px;
+  font-size:8px;
+}
+
+.loginBox__passwordInput{
+  width: 200px;
+  height: 20px;
+  display: flex;
+  justify-self: center;
+  align-self: center;
 }
