--- a/views/landing.pug
+++ b/views/landing.pug
@@ -3,44 +3,49 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    link(rel="stylesheet", href='/staticCSS/main.css')
+    link(rel="stylesheet", href='/staticCSS/splash/main.css')
     link(rel="icon" href='/staticIcons/pikachu.svg')
     title Document
   body
     div.mainBox
       div.phoneBox
-        div
-          img.phoneBox(src='/staticImages/1.png')
-          div.phoneBox.slideShow
-        //- img.test(src="https://picsum.photos/400/400?random=11")
-      div.mainLoginBox
+        div.phoneBox.phoneBox__container
+          img.phoneBox.phoneBox__photoHolder(src='/staticImages/1.png') 
+          //- img.phoneBox.phoneBox__rotatingPhoto(src="https://picsum.photos/400/400?random=11")
+
       div.loginBox.loginBox__logo
         p Pikagram
+        
+      div.loginBox.loginBox__usernameField
+        div.loginBox.loginBox__usernameFieldContainer
+          div.loginBox.loginBox__floatingLabel.loginBox__usernamePlaceholder Your username
+          input.loginBox.loginBox__inputText.loginBox__usernameInput(type="text" name="username" ) 
+          
+      div.loginBox.loginBox__passwordField
+        div.loginBox.loginBox__passwordFieldContainer
+          div.loginBox.loginBox__floatingLabel.loginBox__passwordPlaceholder Your password
+          input.loginBox.loginBox__inputText.loginBox__passwordInput(type="password" name="password")
+          button.loginBox.loginShowBtn.loginShowBtn--hidden Show
 
-      div.loginBox.loginBox__username
-        //- label(for="username" placeholder="phone/username/email")
-        input.loginBox.loginBox__inputText.loginBox__usernameInput(type="text" name="username" ) 
-        div.floating-label Your username
-        //- div Phone, Username or Email
-      //- div.loginBox.loginBox__password
-        //- label(for="password") 55
-      //- div.loginBox.loginBox_passwordField
-      div.floating-label.passwordPlaceholder Your password
-      input.loginBox.loginBox__inputText.loginBox__passwordInput(type="password" name="password")
-      //- button.loginBox.loginShowBtn.loginShowBtn--hidden Show
+      div.loginBox.loginBox__login_buttons 
+        a(href="http://www.google.com"): button.loginBox.loginBox__button.login__button(disabled=true) Log In
+        a(href="http://www.google.com"): button.loginBox.loginBox__button.demo__button(disabled=true) Demo User
 
-      div.loginBox.loginBox__login_buttons
-        a(href="http://www.google.com"): button.loginBox.loginBox__button.login__button.button--disabled(disabled=true) Log In
-        a(href="http://www.google.com"): button.loginBox.loginBox__button.demo__button.button--disabled(disabled=true) Demo User
-      div.loginBox.loginBox__or ───────── OR ─────────
-      div.loginBox.loginBox__fbook  
-        img(src='/staticImages/123.png')
+      div.loginBox.loginBox__orContainer
+        div.loginBox.loginBox__orSpacer
+        div.loginBox.loginBox__or OR 
+        div.loginBox.loginBox__orSpacer
+
+      div.loginBox.loginBox__fbook
+        img(src='/staticImages/fb-logo.png', alt="fb")
+        //- img.phoneBox.phoneBox__photoHolder(src='/staticImages/1.png') 
+        //- div.loginBox.loginBox__fbookLogo 
         p Log in with Facebook
+      div.loginBox.loginBox__forgotPassword
+        a(href='') forgot password?
       div.loginBox.loginBox__signUp
         span Don't have an account? 
           a(href="") sign up
-      div.loginBox.loginBox__forgotPassword
-        a(href='') forgot password?
         
       div.loginBox.loginBox__getApp
         p Get the app.
