--- a/assets/stylesheets/footer.css
+++ b/assets/stylesheets/footer.css
@@ -1,11 +1,13 @@
 .footer {
   position: absolute;
-  /* border: 5px solid red; */
-  bottom: 5px;
+  bottom: 10px;
   display: flex;
   flex-direction: row;
- width:100%;
- justify-content: center;
+  width:100%;
+  justify-content: center;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+  font-size: 12px;
+  font-weight: 600;
 
 }
 
