--- a/assets/stylesheets/splash/media-query.css
+++ b/assets/stylesheets/splash/media-query.css
@@ -3,22 +3,23 @@
     display: none;
   }
   .mainBox {
-  padding:20px;
-  display: grid;
-  grid-template-columns: 1fr 350px 1fr;
-  grid-template-rows:  10px 50fr 40px 40px 30fr 15fr 20fr 14fr 10px 18fr 18fr 44fr;
-  grid-template-areas: 
-  ". . ." 
-  ". logo ."
-  ". username ."
-  ". password ."
-  ". login ."
-  ". or ."
-  ". fbook ."
-  ". forgotpassword ."
-  ". . ."
-  ". signup ."
-  ". getapp ." 
-  ". getAppButtons .";
+    padding:20px;
+    display: grid;
+    grid-template-columns: 1fr 350px 1fr;
+    grid-template-rows:  10px 33px 100px 70px 70px 60px 30px 40px 44px 10px 62.6px 36px 88px;
+    grid-template-areas: 
+    ". . ." 
+    ". . . "
+    ". logo . "
+    ". username . "
+    ". password ."
+    ". login ."
+    ". or ."
+    ". fbook ."
+    ". forgotpassword ."
+    ". . ."
+    ". signup ."
+    ". getapp ." 
+    ". getAppButtons .";
   }
 }
