--- a/assets/stylesheets/splash/username-password.css
+++ b/assets/stylesheets/splash/username-password.css
@@ -6,23 +6,31 @@
   border-radius: 1px;
   background-color: rgb(250,250,250);
   color: rgba(38,38,38);
+  padding-left: 9px;
+  padding-top: 10px;
+  box-sizing: border-box;
 }
-  
+.loginBox.loginBox__passwordField,   .loginBox.loginBox__usernameField{
+  align-items: center;
+  justify-content: flex-end;
+}
+
 .loginBox__passwordFieldContainer > * , .loginBox__usernameFieldContainer > * {
   position: relative;
 }
 
 .loginBox__passwordPlaceholder, .loginBox__usernamePlaceholder {
-  top: 20px;
-  left:-30px;
+  top: 25px;
+  left:10px;
   z-index: 1;
   font-size: 13px;
   height: 22px;
+  user-select: none;
 }
 
 .loginBox__usernamePlaceholder, .loginBox__passwordPlaceholder {
-  top:22px;
-  left:0px;
+  top:30px;
+  left:10px;
   font-size:13px;
   height: 22px;
   align-self: flex-start;
@@ -30,17 +38,18 @@
 }
 
 .loginBox__passwordPlaceholder--active, .loginBox__usernamePlaceholder--active {
-  transition: font-size 1s ease, top 1s ease;
-  top:14px;
-  left:0px;
-  font-size:8px;
+  transition: font-size .1s ease-in, top .1s ease-in;
+  /* transform: scale(.83333) translateY(-6px); */
+  top:20px;
+  left:10px;
+  font-size:9px;
   align-self: flex-start;
 }
 
 .loginBox__passwordPlaceholder--inactive, .loginBox__usernamePlaceholder--inactive {
-  transition: font-size 1s ease, top 1s ease;
-  top: 22px;
-  left:0px;
+  transition: font-size .1s ease-out, top .1s ease-out;
+  top: 30px;
+  left:10px;
   font-size: 13px;
   align-self: flex-start;
 }
@@ -50,30 +59,7 @@
   align-items: flex-start;
   width: 258.8px;
 }
-/* ============THIS IS FOR THE OR TEXT============ */
-.loginBox__orContainer{
-  display:flex;
-  flex-direction: row;
-}
 
-.loginBox__orSpacer {
-  height: 1px;
-  width: 107.233px;
-  line-height: 18px;
-  box-sizing: border-box;
-  background-color:  rgba(219,219,219);
-
-}
-
-.loginBox__fbookLogo {
-  background-image: url('/staticImages/fb-logo.png');
-}
-
-.loginBox__or{
-  margin: 0 18px;
-  font-size: 13px;
-  font-weight: 600;
-}
 /* ============THIS IS FOR THE BUTTONS============ */
 div.loginBox__login_buttons {  
   display: flex;
