commited days work for splash page

--- a/views/landing.pug
+++ b/views/landing.pug
@@ -11,7 +11,7 @@ html(lang="en")
       div.phoneBox
         div.phoneBox.phoneBox__container
           img.phoneBox.phoneBox__photoHolder(src='/staticImages/1.png') 
-          //- img.phoneBox.phoneBox__rotatingPhoto(src="https://picsum.photos/400/400?random=11")
+          img.phoneBox.phoneBox__rotatingPhoto(src="https://picsum.photos/400/400?random=11")
 
       div.loginBox.loginBox__logo
         p Pikagram
@@ -25,7 +25,7 @@ html(lang="en")
         div.loginBox.loginBox__passwordFieldContainer
           div.loginBox.loginBox__floatingLabel.loginBox__passwordPlaceholder Password
           input.loginBox.loginBox__inputText.loginBox__passwordInput(type="password" name="password")
-          //- button.loginBox.loginShowBtn.loginShowBtn--hidden Show
+          button.loginBox.loginShowBtn.loginShowBtn--hidden Show
 
       div.loginBox.loginBox__login_buttons 
         a(href="http://www.google.com"): button.loginBox.loginBox__button.login__button(disabled=true) Log In
