most functionality with splash page is complete.

--- a/assets/stylesheets/splash/phone-box.css
+++ b/assets/stylesheets/splash/phone-box.css
@@ -11,6 +11,32 @@ img.phoneBox {
 div.phoneBox {
   display: flex;
   justify-items: center;
-  height: 480px;
+  height: 980px;
 }
 
+.phoneBox__container {
+overflow-x: hidden;
+overflow-y: visible;
+
+}
+
+.phoneBox__rotatingPhotoContainer {
+width: 240px;
+height: 427px;
+z-index: 1;
+object-fit: contain;
+position: relative;
+/* overflow-x: hidden;
+overflow-y: visible; */
+}
+
+.phoneBox__rotatingPhoto{
+  width: 240px;
+  height: 427px;
+  object-fit: contain;
+  position: absolute;
+  right: 63px;
+  top:4px;
+  /* overflow-x: hidden;
+overflow-y: visible; */
+}
