--- a/assets/stylesheets/splash/username-password.css
+++ b/assets/stylesheets/splash/username-password.css
@@ -1,58 +1,75 @@
+
 .loginBox__inputText {
-  font-size: 14px;
-  height: 36px;
-  width: 258.8px;
-  border: 1px solid rgba(219,219,219);
-  border-radius: 1px;
-  background-color: rgb(250,250,250);
-  color: rgba(38,38,38);
-  padding-left: 9px;
-  padding-top: 10px;
-  box-sizing: border-box;
+  font-size: 12px;
+  height: 26px;
+  color: rgb(38,38,38);
+  width: 218.8px;
+  border:none;
+  background-color: transparent;
+  position: relative;
+  left:9px;
+  top: -8px;
 }
-.loginBox.loginBox__passwordField,   .loginBox.loginBox__usernameField{
+
+.loginBox__inputText--active {
+  top: -1px;
+}
+
+.loginBox__passwordShowContainer {
+  flex-direction: row;
+  height: 19.55px;
+}
+
+.loginBox__passwordFieldContainer, .loginBox__usernameFieldContainer{ 
+  position: relative;
   align-items: center;
   justify-content: flex-end;
+  height: 36px;
+  width: 258.8px;
+  border: 1px solid rgb(219, 219, 219);
+  border-radius: 3px;
+  background-color: rgb(250,250,250);
+  color: rgba(38,38,38);
+  box-sizing: border-box;
+}
+.loginBox__passwordFieldContainer:hover, .loginBox__usernameFieldContainer:hover, .loginBox__passwordPlaceholder:hover, .loginBox__usernamePlaceholder:hover{
+  cursor: text;
 }
 
-.loginBox__passwordFieldContainer > * , .loginBox__usernameFieldContainer > * {
-  position: relative;
+.loginBox__passwordFieldContainer:hover, .loginBox__usernameFieldContainer:hover {
+  border: 1px solid rgb(150, 150, 150)
+
 }
+
+/* .loginBox__passwordFieldContainer > * , .loginBox__usernameFieldContainer > * {
+  position: relative;
+  justify-content: flex-start;
+  align-items: flex-start;
+} */
 
 .loginBox__passwordPlaceholder, .loginBox__usernamePlaceholder {
-  top: 25px;
-  left:10px;
-  z-index: 1;
-  font-size: 13px;
-  height: 22px;
-  user-select: none;
-}
-
-.loginBox__usernamePlaceholder, .loginBox__passwordPlaceholder {
-  top:30px;
-  left:10px;
-  font-size:13px;
-  height: 22px;
-  align-self: flex-start;
   color: rgba(142,142,142);
+  position: relative;
+  height: 22px;
+  top: 8px;
+  left:9px;
+  font-size: 13px;
+}
+.loginBox__passwordPlaceholder--inactive, .loginBox__usernamePlaceholder--inactive {
+  transition: font-size .1s ease-out, top .1s ease-out;
+  top: 8px;
+  left:9px;
+  font-size: 13px;
 }
 
 .loginBox__passwordPlaceholder--active, .loginBox__usernamePlaceholder--active {
   transition: font-size .1s ease-in, top .1s ease-in;
   /* transform: scale(.83333) translateY(-6px); */
-  top:20px;
-  left:10px;
+  top:0px;
+  left:9px;
   font-size:9px;
-  align-self: flex-start;
 }
 
-.loginBox__passwordPlaceholder--inactive, .loginBox__usernamePlaceholder--inactive {
-  transition: font-size .1s ease-out, top .1s ease-out;
-  top: 30px;
-  left:10px;
-  font-size: 13px;
-  align-self: flex-start;
-}
 
 .loginBox__passwordFieldContainer, .loginBox__usernameFieldContainer {
   display:flex;
@@ -86,7 +103,7 @@ div.loginBox__login_buttons {
   cursor: pointer;
 }
 
-.loginBox__button:hover:disabled {
+.login__button:hover:disabled {
   cursor: default;
 }
   
@@ -94,3 +111,6 @@ div.loginBox__login_buttons {
   background-color: rgba(0, 149, 246, 0.3);
 }
 
+.demo__button:hover {
+  background-color: rgba(0, 149, 246, 1);
+}
