--- a/assets/stylesheets/splash/login-window.css
+++ b/assets/stylesheets/splash/login-window.css
@@ -28,7 +28,7 @@
   color:#8e8e8e
 }
 .loginBox__orSpacer {
-  height: 1px;
+  height: .8px;
   width: 107.233px;
   line-height: 18px;
   box-sizing: border-box;
@@ -73,7 +73,6 @@
   text-align: center;
   font-weight: 300;
   margin: 5px;
-
 }
 
 .loginBox__signUp  {
