--- a/assets/stylesheets/splash/show-button.css
+++ b/assets/stylesheets/splash/show-button.css
@@ -1,7 +1,7 @@
 /* ============THIS IS FOR THE SHOW BUTTON============ */
 .loginShowBtn{
-  right: -217px;
-  top: -27px;
+  right: 5px;
+  top: -6px;
   height: 26px;
   border: none;
   background-color: rgb(250,250,250);
@@ -9,7 +9,10 @@
   height: 18px;
   font-weight: 600;
   font-size: 14px;
+  position: relative;
 }
+
+.loginShowBtn {cursor: pointer;}
 
 .loginShowBtn--hidden{
   box-sizing: border-box;
