--- a/assets/stylesheets/splash/login-window.css
+++ b/assets/stylesheets/splash/login-window.css
@@ -1,5 +1,3 @@
-@font-face { font-family: "My Custom Font"; src: url("/staticFonts/Billabong.ttf") format("truetype");}
-
 .loginBox{
   display: flex;
   flex-direction: column;
@@ -12,7 +10,7 @@
   display: flex;
   justify-content: center;
   letter-spacing: 1px;
-  font-family: "My Custom Font";
+  font-family: "pikaFont";
   color:rgba(7, 7, 7, .75);
   text-shadow: 0 0 1.6px rgba(100, 100, 100, 5);
   font-size: 53px;
