--- a/assets/stylesheets/splash/username-password.css
+++ b/assets/stylesheets/splash/username-password.css
@@ -9,6 +9,7 @@
   position: relative;
   left:9px;
   top: -8px;
+  outline-width: 0;
 }
 
 .loginBox__inputText--active {
@@ -83,6 +84,7 @@ div.loginBox__login_buttons {
   flex-direction: row;
 }
 
+/* .loginBox__button a , .loginBox__button button {outline-width: 0;} */
 .loginBox__button {
   height: 30px;
   font-size: 14px;
@@ -96,7 +98,8 @@ div.loginBox__login_buttons {
   padding: 10px 30px;
   margin: 0 4px;
   cursor: pointer;
-  white-space: nowrap
+  white-space: nowrap;
+  /* outline-width: 0; */
 }
 
 .loginBox__button:hover {
