--- a/views/home.pug
+++ b/views/home.pug
@@ -1,17 +1,24 @@
 extends index
 block content
   include navbar
-  .posts 
-    p these are the posts
-  .profileIcon pretty pic
-  .username sweet name
-  .followStatus UNFOLLOW
-  .myProfile link to my profile
-  .suggestionHeader suggested users
-  .profile1 pak the great
-  .profile2 ten the terrible
-  .profile3 co the swisher
-  .profile4 ra the css-er
-  .profile5 ke the peeping tom
-  include footer
-  script(src="/staticJs/home.js")
+  .mainBoxHome
+    .postsContainer
+    .myProfile link to my profile its really long to  here
+    .suggestionHeader suggested users
+    .profile1 geoff the great
+    .icon1 O
+    .followStatus1 UNFOLLOW
+    .profile2 ted the terrible
+    .icon2 O
+    .followStatus2 UNFOLLOW
+    .profile3 devin the destroyer
+    .icon3 O
+    .followStatus3 FOLLOW
+    .profile4 ang the arbiter 
+    .icon4 O
+    .followStatus4 UNFOLLOW
+    .profile5 kejin the creator
+    .icon5 O
+    .followStatus5 FOLLOW
+    include footer
+    script(src="/staticJs/home.js")
