--- a/views/login.pug
+++ b/views/login.pug
@@ -23,8 +23,8 @@ block content
           button.loginBox.loginShowBtn.loginShowBtn--hidden Show
 
     div.loginBox.loginBox__login_buttons 
-      button.loginBox.loginBox__button.login__button(disabled=true) Log In
-      button.loginBox.loginBox__button.demo__button(disabled=true) Demo User
+      a(href="http://www.google.com"): button.loginBox.loginBox__button.login__button(disabled=true) Log In
+      a.demo__link(href="http://www.google.com"): button.loginBox.loginBox__button.demo__button(disabled=true) Demo User
 
     div.loginBox.loginBox__orContainer
       div.loginBox.loginBox__orSpacer
