--- a/assets/stylesheets/splash/window.css
+++ b/assets/stylesheets/splash/window.css
@@ -2,6 +2,7 @@ body, button{
   background-color: rgba(250,250,250);
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
 }
+a { outline-width: 0;}
 /* width 753 px 
 height 584px
 phone width 371px
