add fetch methods

--- a/views/home.pug
+++ b/views/home.pug
@@ -7,16 +7,16 @@ block content
     .suggestionHeader suggested users
     .profile1 geoff the great
     .icon1 O
-    .followStatus1 UNFOLLOW
+    .followStatus1 FOLLOW
     .profile2 ted the terrible
     .icon2 O
-    .followStatus2 UNFOLLOW
+    .followStatus2 FOLLOW
     .profile3 devin the destroyer
     .icon3 O
     .followStatus3 FOLLOW
     .profile4 ang the arbiter 
     .icon4 O
-    .followStatus4 UNFOLLOW
+    .followStatus4 FOLLOW
     .profile5 kejin the creator
     .icon5 O
     .followStatus5 FOLLOW
