--- a/views/splash.pug
+++ b/views/splash.pug
@@ -40,7 +40,7 @@ block content
 
     div.loginBox.loginBox__signUp 
       p Don't have an account?  
-      a(href="") Sign up
+      a(href="/signup") Sign up
       
     div.loginBox.loginBox__getApp
       p Get the app.
