interday commit for branch point

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -3,9 +3,8 @@
 @import url("./navbar.css");
 @import url("./splash/phone-box.css");
 @import url("./splash/window.css");
-@import url("./splash/login-window.css");
+@import url("./splash/login-box.css");
 @import url("./splash/show-button.css");
-@import url("./splash/login-window.css");
 @import url("./splash/username-password.css");
 @import url("./splash/media-query.css");
 @import url("./home/window.css");
