--- a/assets/stylesheets/splash/username-password.css
+++ b/assets/stylesheets/splash/username-password.css
@@ -79,7 +79,7 @@
 }
 
 /* ============THIS IS FOR THE BUTTONS============ */
-div.loginBox__login_buttons {  
+div.loginBox__loginButtons {  
   display: flex;
   flex-direction: row;
 }
@@ -102,18 +102,8 @@ div.loginBox__login_buttons {
   /* outline-width: 0; */
 }
 
-.loginBox__button:hover {
-  cursor: pointer;
-}
-
-.login__button:hover:disabled {
-  cursor: default;
-}
-  
-.loginBox__button:disabled {
-  background-color: rgba(0, 149, 246, 0.3);
-}
-
-.demo__button:hover {
-  background-color: rgba(0, 149, 246, 1);
-}
+.demo__button{ background-color: rgba(0, 149, 246, 0.3);}
+.loginBox__button:hover { cursor: pointer;}
+.login__button:hover:disabled { cursor: default;}
+.login__button:disabled { background-color: rgba(0, 149, 246, 0.3);}
+.demo__button:hover { background-color: rgba(0, 149, 246, 1);}
