--- a/views/signup.pug
+++ b/views/signup.pug
@@ -1,11 +1,11 @@
 extends index
 block content
   div.mainBox
-    div.phoneBox
-      div.phoneBox.phoneBox__container
-        img.phoneBox.phoneBox__photoHolder(src='/staticImages/1.png') 
-        div.phoneBox.phoneBox__rotatingPhotoContainer
-          img.phoneBox.phoneBox__rotatingPhoto(src="https://i.picsum.photos/id/912/240/427.jpg?hmac=02U4KdKBh3QL_E1T5g9DMvlbEeaGHNn4WH4G4sOEFWQ")
+    //- div.phoneBox
+    //-   div.phoneBox.phoneBox__container
+    //-     img.phoneBox.phoneBox__photoHolder(src='/staticImages/1.png') 
+    //-     div.phoneBox.phoneBox__rotatingPhotoContainer
+    //-       img.phoneBox.phoneBox__rotatingPhoto(src="https://i.picsum.photos/id/912/240/427.jpg?hmac=02U4KdKBh3QL_E1T5g9DMvlbEeaGHNn4WH4G4sOEFWQ")
 
     div.loginBox.loginBox__logo
       p Pikagram
