--- a/views/splash.pug
+++ b/views/splash.pug
@@ -22,9 +22,9 @@ block content
           input.loginBox.loginBox__inputText.loginBox__passwordInput(type="password" name="password")
           button.loginBox.loginShowBtn.loginShowBtn--hidden Show
 
-    div.loginBox.loginBox__login_buttons 
+    div.loginBox.loginBox__loginButtons 
       button.loginBox.loginBox__button.login__button(disabled=true) Log In
-      button.loginBox.loginBox__button.demo__button(disabled=true) Demo User
+      button.loginBox.loginBox__button.demo__button(disabled=false) Demo User
 
     div.loginBox.loginBox__orContainer
       div.loginBox.loginBox__orSpacer
@@ -49,4 +49,4 @@ block content
       a(href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26ig_mid%3D6535D6D9-46B8-426F-9CB4-0C0AA43E7C80%26utm_content%3Dlo%26utm_medium%3Dbadge"): img.loginBox.loginBox__googlePlay(src='/staticImages/playStore.png') 
       //- img(src='/staticImages/123.png') 
   include footer
-  script(src="/staticJs/landing.js")
+  script(src="/staticJs/splash.js")
