--- a/assets/stylesheets/splash/username-password.css
+++ b/assets/stylesheets/splash/username-password.css
@@ -84,7 +84,6 @@ div.loginBox__loginButtons {
   flex-direction: row;
 }
 
-/* .loginBox__button a , .loginBox__button button {outline-width: 0;} */
 .loginBox__button {
   height: 30px;
   font-size: 14px;
@@ -99,7 +98,7 @@ div.loginBox__loginButtons {
   margin: 0 4px;
   cursor: pointer;
   white-space: nowrap;
-  /* outline-width: 0; */
+  outline-width: 0;
 }
 
 .demo__button{ background-color: rgba(0, 149, 246, 0.3);}
@@ -107,3 +106,4 @@ div.loginBox__loginButtons {
 .login__button:hover:disabled { cursor: default;}
 .login__button:disabled { background-color: rgba(0, 149, 246, 0.3);}
 .demo__button:hover { background-color: rgba(0, 149, 246, 1);}
+.loginBox__button a , .loginBox__button button {outline-width: 0;}
