--- a/assets/stylesheets/splash/window.css
+++ b/assets/stylesheets/splash/window.css
@@ -3,16 +3,12 @@ body, button{
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
 }
 a { outline-width: 0;}
-/* width 753 px 
-height 584px
-phone width 371px
-horizontal gap 25px
-top vertical gap on phone 18px */
+
 .mainBox {
   padding:20px;
   display: grid;
   grid-template-columns: 1fr 426px 350px 1fr;
-  grid-template-rows:  10px 33px 100px 53px 53px 60px 30px 40px 44px 10px 62.6px 36px 88px;
+  grid-template-rows:  10px 33px 100px 53px 53px 60px 30px 30px 40px 44px 10px 62.6px 36px 88px;
   grid-template-areas: 
   ". . . ." 
   ". phone . . "
@@ -21,6 +17,7 @@ top vertical gap on phone 18px */
   ". phone password ."
   ". phone login ."
   ". phone or ."
+  ". phone error ."
   ". phone fbook ."
   ". phone forgotpassword ."
   ". phone . ."
@@ -29,47 +26,20 @@ top vertical gap on phone 18px */
   ". phone getAppButtons .";
 }
 
-.phoneBox {
-  grid-area: phone;
-  display: flex;
-  z-index: 1;
-  justify-content: center;
-}
+.phoneBox {  grid-area: phone;  display: flex;  z-index: 1;  justify-content: center;}
+.loginBox__logo { grid-area: logo;}
+.loginBox__usernameField { grid-area: username; position: relative;}
+.loginBox__passwordField {  grid-area: password;  position: relative;}
+.loginBox__loginButtons {  grid-area: login;}
+.loginBox__orContainer {  grid-area: or;}
+.loginBox__errorMessage {  grid-area: error;}
+.loginBox__fbook {  grid-area: fbook;}
+.loginBox__signUp {  grid-area: signup;}
+.loginBox__forgotPassword { grid-area: forgotpassword;}
+.loginBox__getApp { grid-area: getapp;}
+.loginBox__getAppButtons {grid-area: getAppButtons;}
 
-.loginBox__logo {
-  grid-area: logo;
-}
-.loginBox__usernameField {
-  grid-area: username;
-  position: relative;
-}
-.loginBox__passwordField {
-  grid-area: password;
-  position: relative;
-}
-.loginBox__loginButtons {
-  grid-area: login;
-}
-.loginBox__orContainer {
-  grid-area: or;
-}
-.loginBox__fbook {
-  grid-area: fbook;
-}
-.loginBox__signUp {
-  grid-area: signup;
-}
-.loginBox__forgotPassword {
-  grid-area: forgotpassword;
-}
-.loginBox__getApp {
-  grid-area: getapp;
-}
-.loginBox__getAppButtons {
-  grid-area: getAppButtons;
-}
-
-.loginBox__logo ,.loginBox__usernameField,.loginBox__passwordField,.loginBox__loginButtons,.loginBox__orContainer,.loginBox__fbook,.loginBox__signUp,.loginBox__forgotPassword {
+.loginBox__logo ,.loginBox__usernameField,.loginBox__passwordField,.loginBox__loginButtons,.loginBox__orContainer,.loginBox__errorMessage,.loginBox__fbook,.loginBox__signUp,.loginBox__forgotPassword {
   border-right: 1px solid rgba(219,219,219);
   border-left: 1px solid rgba(219,219,219);
   background-color: rgba(255,255,255);
@@ -79,6 +49,7 @@ top vertical gap on phone 18px */
   border-top: 1px solid rgba(219,219,219);
   border-radius: 1px;
 }
+
 .loginBox__forgotPassword, .loginBox__signUp{
   border-bottom: 1px solid rgba(219,219,219);
   border-radius: 1px;
