--- a/views/signup.pug
+++ b/views/signup.pug
@@ -1,15 +1,12 @@
 extends index
 block content
   div.mainBox
-    //- div.phoneBox
-    //-   div.phoneBox.phoneBox__container
-    //-     img.phoneBox.phoneBox__photoHolder(src='/staticImages/1.png') 
-    //-     div.phoneBox.phoneBox__rotatingPhotoContainer
-    //-       img.phoneBox.phoneBox__rotatingPhoto(src="https://i.picsum.photos/id/912/240/427.jpg?hmac=02U4KdKBh3QL_E1T5g9DMvlbEeaGHNn4WH4G4sOEFWQ")
-
     div.loginBox.loginBox__logo
       p Pikagram
-      
+
+    div.loginBox.loginBox__signupText
+      p Sign up to see photos and videos from your friends. 
+
     div.loginBox.loginBox__emailField
       div.loginBox.loginBox__emailFieldContainer
         label.loginBox.loginBox__floatingLabel.loginBox__emailPlaceholder Email 
@@ -17,7 +14,7 @@ block content
         
     div.loginBox.loginBox__fullnameField
       div.loginBox.loginBox__fullnameFieldContainer
-        label.loginBox.loginBox__floatingLabel.loginBox__fullnamePlaceholder full Name or email 
+        label.loginBox.loginBox__floatingLabel.loginBox__fullnamePlaceholder Full Name 
         input.loginBox.loginBox__inputText.loginBox__fullnameInput(type="text" name="fullname" ) 
         
     div.loginBox.loginBox__usernameField
@@ -28,17 +25,10 @@ block content
     div.loginBox.loginBox__passwordField
       div.loginBox.loginBox__passwordFieldContainer
         label.loginBox.loginBox__floatingLabel.loginBox__passwordPlaceholder Password
-        div.loginBox.loginBox__passwordShowContainer
-          input.loginBox.loginBox__inputText.loginBox__passwordInput(type="password" name="password")
-          button.loginBox.loginShowBtn.loginShowBtn--hidden Show
+        input.loginBox.loginBox__inputText.loginBox__passwordInput(type="password" name="password")
 
     div.loginBox.loginBox__login_buttons 
-      button.loginBox.loginBox__button.signup__button(disabled=true) Signup
-
-    div.loginBox.loginBox__orContainer
-      div.loginBox.loginBox__orSpacer
-      div.loginBox.loginBox__or OR 
-      div.loginBox.loginBox__orSpacer
+      button.loginBox.loginBox__button.signup__button(disabled=true) Sign up
 
     div.loginBox.loginBox__termsOfCondition
       img(src='/staticImages/fb-logo.png', alt="fb")
