add get, post, and deletePika functions to utils\nadd like functionality to home page

--- a/views/home.pug
+++ b/views/home.pug
@@ -21,4 +21,4 @@ block content
     .icon5 O
     .followStatus5 FOLLOW
     include footer
-    script(src="/staticJs/home.js")
+    script(src="/staticJs/home.js" type="module")
