--- a/views/profile.pug
+++ b/views/profile.pug
@@ -20,5 +20,5 @@ block content
   
   .postsContainer posts
   include footer
-  script(src="staticJs/profile.js")
+  script(src="staticJs/profile.js" type="module")
   
